# Qt-project-

./: BD_schema.sql  DOC_connection mysql-qt.txt  README.md  Rapport de projet groupe 16.docx  UML.mdj  backup.sql
UML-html/contents/: element_index.html  navigation.html
econtrol/: BD_schema.sql  CMakeLists.txt  main.cpp
econtrol/Qml/: ClientView.qml  DashBoardView.qml  DishModelView.qml  Main.qml  OrderView.qml  StockView.qml
econtrol/headers/: Commande.h  DatabaseManager.h  Facture.h  GestionData.h  client.h
econtrol/sources/: Client.cpp  Commande.cpp  DatabaseManager.cpp  DetailsCommandes.cpp  GestionData.cpp
econtrol_1.0/: CMakeLists.txt  CMakeLists.txt.user.6a4a496  CMakeLists.txt.user.a0a4993  main.cpp  resources.qrc
econtrol_1.0/Qml/: ClientView.qml  DashBoardView.qml  DishModelView.qml  Main.qml  OrderView.qml  StatisticsView.qml  StockView.qml
econtrol_1.0/headers/: Commande.h  DetailsCommandes.h  Facture.h  GestionData.h  Plat.h  Stock.h  client.h
econtrol_1.0/sources/: Client.cpp  Commande.cpp  DetailsCommandes.cpp  Facture.cpp  GestionData.cpp  Plat.cpp  Stock.cpp
econtrol_bdd/: CMakeLists.txt  Main.qml  backend.cpp  backend.h  connection.h  main.cpp
econtrol_bdd/Qml/: ClientView.qml  DashBoardView.qml  DishModelView.qml  Main.qml  OrderView.qml  test.qml
econtrol_bdd/controllers/: clientcontroller.cpp  clientcontroller.h  platcontroller.cpp  platcontroller.h
econtrol_bdd/headers/: Commande.h  DetailsCommandes.h  Facture.h  Plat.h  Stock.h  client.h
econtrol_bdd/sources/: Client.cpp  Facture.cpp  Plat.cpp  Stock.cpp
prototype/: main.cpp
prototype/headers/: DetailsCommande.hpp  client.hpp  commande.hpp  detailCommande.hpp  facture.hpp  plat.hpp
prototype/sources/: client.cpp  commande.cpp  detailsCommande.cpp  facture.cpp  plat.cpp
sans_titre/: CMakeLists.txt  main.cpp
